--- a/src/app/shared/ui/patterns/main-layout/main-layout.component.html
+++ b/src/app/shared/ui/patterns/main-layout/main-layout.component.html
@@ -1,3 +1,5 @@
+<app-spinner *ngIf="isLoading"></app-spinner>
+
 <div class="grid-wrapper">
   <app-header></app-header>
   <app-sidebar></app-sidebar>
